--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: java
 jdk: openjdk11
-script: mvn clean install
+install: true
+script: ./mvnw clean install
+
+cache:
+	directories:
+	- $HOME/.m2
