--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: java
 jdk: openjdk11
 install: true
-script: ./mvnw clean install
+script: 
+  - mvn clean install
 
 cache:
 	directories:
