--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+- provider: gae
+  keyfile: /home/eduardo/Downloads/erp-test-202020-fb7a70a703a8.json
+  project: DEFINIR
+  on:
+    branch: main
 cache:
   directories:
     - $HOME/.m2
