--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,8 @@ deploy:
  project: "erp-test-202020"
  on:
    branch: main
+
+before_install:
+- openssl aes-256-cbc -K $encrypted_bf8e2eb0ccbd_key -iv $encrypted_bf8e2eb0ccbd_iv
+  -in erp-test-202020-fb7a70a703a8.json.enc -out ../erp-test-202020-fb7a70a703a8.json
+  -d
