--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
 
 deploy:
  provider: gae
- keyfile: /home/eduardo/Downloads/erp-test-202020-fb7a70a703a8.json
+ keyfile: ../erp-test-202020-fb7a70a703a8.json
  project: "erp-test-202020"
  on:
    branch: main
