Build.sh executavel

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 cache:
   directories:
+    - $HOME/google-cloud-sdk
     - $HOME/.m2
 language: java
 jdk: openjdk11
@@ -15,6 +16,9 @@ deploy:
    branch: main
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_bf8e2eb0ccbd_key -iv $encrypted_bf8e2eb0ccbd_iv
-  -in erp-test-202020-fb7a70a703a8.json.enc -out ../erp-test-202020-fb7a70a703a8.json
-  -d
+- openssl aes-256-cbc -K $encrypted_bf8e2eb0ccbd_key -iv $encrypted_bf8e2eb0ccbd_iv -in erp-test-202020-fb7a70a703a8.json.enc -out ../erp-test-202020-fb7a70a703a8.json -d
+- if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then
+	rm -rf $HOME/google-cloud-sdk;
+	curl https://sdk.cloud.google.com | bash;
+  fi
+- source $HOME/google-cloud-sdk/path.bash.inc
