--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,12 @@ deploy:
    branch: main
 
 before_install:
+- export CLOUDSDK_CORE_DISABLE_PROMPTS=1
 - openssl aes-256-cbc -K $encrypted_bf8e2eb0ccbd_key -iv $encrypted_bf8e2eb0ccbd_iv -in erp-test-202020-fb7a70a703a8.json.enc -out ../erp-test-202020-fb7a70a703a8.json -d
+- if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then
+    rm -rf $HOME/google-cloud-sdk;
+    curl https://sdk.cloud.google.com | bash;
+  fi
+- source $HOME/google-cloud-sdk/path.bash.inc
+- gcloud auth activate-service-account --key-file=$TRAVIS_BUILD_DIR/travis-ci-petclinic.json
+- gcloud config set core/project $PROJECT_ID
