--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,13 @@ deploy:
  on:
    branch: main
 
+addons:
+  apt:
+    sources:
+      - deadsnakes # source required so it finds the package definition below
+    packages:
+      - python3.7.9
+
 before_install:
 - export CLOUDSDK_CORE_DISABLE_PROMPTS=1
 - export PROJECT_ID=erp-test-202020
