--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,8 @@ before_install:
   fi
 - source $HOME/google-cloud-sdk/path.bash.inc
 - gcloud auth activate-service-account --key-file=../erp-test-202020-fb7a70a703a8.json
-- gcloud config set core/project $PROJECT_ID
 - pip install -U cryptography
+- gcloud components update --quiet
+- gcloud components install beta pubsub-emulator --quiet
+- gcloud config set core/project $PROJECT_ID
+
