--- a/erp/pom.xml
+++ b/erp/pom.xml
@@ -52,6 +52,18 @@
 <!--            <artifactId>hibernate-entitymanager</artifactId>-->
 <!--            <version>5.2.3.Final</version>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-gcp-starter-data-spanner</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-gcp-starter-trace</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-gcp-starter-logging</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
