--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ deploy:
    branch: main
 
 before_install:
+- sudo apt-get update
+- sudo apt purge python2.7-minimal
+- sudo apt-get install python3
 - export CLOUDSDK_CORE_DISABLE_PROMPTS=1
 - export PROJECT_ID=erp-test-202020
 - openssl aes-256-cbc -K $encrypted_bf8e2eb0ccbd_key -iv $encrypted_bf8e2eb0ccbd_iv -in erp-test-202020-fb7a70a703a8.json.enc -out ../erp-test-202020-fb7a70a703a8.json -d
@@ -27,6 +30,5 @@ before_install:
 - gcloud auth activate-service-account --key-file=../erp-test-202020-fb7a70a703a8.json
 - pip install -U cryptography
 - gcloud  components update --version 330.0.0
-- gcloud components install beta pubsub-emulator --quiet
 - gcloud config set core/project $PROJECT_ID
 
